Fix typos in References.fr

--- a/InvenietisPortal/Views/Home/References.fr.cshtml
+++ b/InvenietisPortal/Views/Home/References.fr.cshtml
@@ -25,10 +25,10 @@
                     <img src="~/content/images/references/logo_Cofely.jpg" alt="Cofely">
                 </div>
                 <div class="span8">
-                    <h2>Cofely</h2>
+                    <h2>ENGIE Cofely</h2>
 
-                    <p>Cofely conçoit, met en œuvre et exploite des solutions qui permettent aux entreprises et aux collectivités de mieux utiliser les énergies et de réduire leur impact environnemental.</p>
-                    <p>En partenarait avec l'agence <b>Fivetouch</b> et l'agence <b>Babel</b>, Signature Code a réalisé un système de gestion électronique de document et une gestion de contenu versionnée afin d'offrir aux commerciaux une plateforme d'aide à la vente.</p>
+                    <p>ENGIE Cofely conçoit, met en œuvre et exploite des solutions qui permettent aux entreprises et aux collectivités de mieux utiliser les énergies et de réduire leur impact environnemental.</p>
+                    <p>En partenariat avec l'agence <b>Fivetouch</b> et l'<b>Agence Babel</b>, Signature Code a réalisé un système de gestion électronique de documents, avec gestion de contenu versionné, qui offre aux commerciaux d'ENGIE une plateforme d'aide à la vente optimale, adaptée sur mesure aux besoins de leurs métiers.</p>
                 </div>
             </div>
         </section>
@@ -40,8 +40,8 @@
             <div class="row-fluid">
                 <div class="span8">
                     <h2>Groupe ESIEA</h2>
-                    <p>Le groupe ESIEA est composé de deux écoles : ESIEA, école d'ingénieur et IN'TECH INFO, école supérieur en ingénierie informatique. </p>
-                    <p>Signature Code a développé le portail de candidature des écoles du groupe ainsi que l'extranet de gestion lié.</p>
+                    <p>Le groupe ESIEA comprend deux écoles : l'ESIEA, école d'ingénieur et IN'TECH INFO, école supérieure en ingénierie informatique. </p>
+                    <p>Signature Code a développé le portail de candidature des écoles du groupe, ainsi que l'extranet de gestion lié.</p>
                     <h4>Inscrivez-vous !</h4>
                     <ul>
                         <li><a target="_blank" href="https://candidature.esiea.fr/">Candidatures ESIEA</a></li>
